# INF2004-Embedded-Systems-Programming-T15

./: README.md
driver/encoder/: encoder.c
driver/integration/: integration.c
driver/irline/: barcode.c
driver/magnometer/: CMakeLists.txt  mag_test.c  magnometer.c  magnometer.h
driver/motor/: motor.c  motor.h
driver/ultrasonic/: CMakeLists.txt  cmExample.c
driver/wifi/: TCP_Client.py  TCP_Server.c
integration/: CMakeLists.txt  integration.c
partial_integration/barcode_scanner_wifi/: CMakeLists.txt  barcode_scanner_client.py  barcode_scanner_server.c
partial_integration/motor_forward_straight/: CMakeLists.txt  motor_forward_straight.c
partial_integration/motor_straight/: CMakeLists.txt
partial_integration/motor_turn_magno/: CMakeLists.txt  motor_turn_magno.c  turning.c
partial_integration/obstacle_detector/: obstacle_detector.c
